# pheidippides

./: Cargo.toml  README.md  chat.html  issues.txt  login.html  login_fail.html  login_success.html
lib/http-server/: Cargo.toml
lib/http-server/src/: event_source.rs  http_response.rs  lib.rs  method.rs  request.rs  response.rs  server.rs
lib/mock-db/: Cargo.toml
lib/mock-db/src/: lib.rs
lib/pheidippides-auth/: Cargo.toml
lib/pheidippides-auth/src/: lib.rs
lib/pheidippides-db-tests/src/: lib.rs
lib/pheidippides-messenger/: Cargo.toml
lib/pheidippides-messenger/src/: app.rs  authorization.rs  data_access.rs  lib.rs  messenger.rs  subscriptions_handler.rs
lib/pheidippides-utils/: Cargo.toml
lib/pheidippides-utils/src/: async_utils.rs  http.rs  lib.rs  serde.rs  utils.rs
lib/pheidippides-utils/src/serde/: form_data.rs
lib/pheidippides-web/: Cargo.toml
lib/pheidippides-web/src/: flow_controller.rs  lib.rs  request_handler.rs  routing.rs  sessions.rs
lib/pheidippides-web/src/routing/: actions.rs  html.rs  json.rs  pages.rs  tools.rs
lib/pheidippides-web/templates/: chat.html
lib/pheidippides-web/templates/tools/: event_source.html
lib/postgres-db/: Cargo.toml
lib/postgres-db/migrations/: 1_initialize_db.sql  2_create_messages_timestamp_index.sql
lib/postgres-db/src/: lib.rs
lib/web-server/: Cargo.toml
lib/web-server/src/: lib.rs
mock-db/: Cargo.toml
mock-db/src/: lib.rs
pheidippides/: Cargo.toml
pheidippides-db-tests/: Cargo.toml
pheidippides-db-tests/src/: lib.rs
pheidippides-messenger/: Cargo.toml
pheidippides-messenger/src/: app.rs  authorization.rs  db.rs  lib.rs
pheidippides-utils/src/: async_utils.rs  lib.rs  serde.rs  utils.rs
pheidippides-utils/src/serde/: form_data.rs
pheidippides-web/: Cargo.toml
pheidippides-web/src/: routing.rs  sessions.rs
pheidippides-web/src/routing/: html.rs  json.rs
pheidippides-web/templates/: login_fail.html
pheidippides/src/: app.rs  authorization.rs  db.rs  lib.rs
postgres-db/: Cargo.toml
postgres-db/src/: lib.rs
src/: app.rs  async_utils.rs  authorization.rs  db.rs  fs.rs  http.rs  lib.rs  main.rs  routing.rs  serde_query_string_params.rs  sessions.rs  utils.rs
src/db/: mock.rs  pg.rs
src/http/: http_response.rs
src/routing/: html.rs  json.rs  tools.rs
templates/: chat.html  login.html  signup.html
templates/elements/: chats.html
tests/: Cargo.toml  app.rs  data_access.rs  http.rs  routing.rs
web-server/: Cargo.toml
web-server/src/: http.rs  lib.rs  routing.rs  sessions.rs
web-server/src/routing/: html.rs  json.rs  tools.rs
