[package]
name = "pheidippides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tiny_http = "0.12.0"
tokio = { version = "1.36.0", features = ["net"] }
url-escape = "0.1.1"
uuid = { version = "1.8.0", features = ["v4"] }
