[workspace]
resolver = "2"
members = [
    "lib/pheidippides-messenger",
    "lib/pheidippides-utils",
    "lib/pheidippides-web",
    "lib/pheidippides-auth",
    "lib/http-server",
    "lib/postgres-db",
    "lib/mock-db",
    "tests",
    
    "bin/server",
    "bin/migrate", "lib/pheidippides-auth",
]
