[package]
name = "pheidippides-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
askama = "0.12.1"
once_cell = "1.19.0"
pheidippides = { path = "../pheidippides" }
pheidippides-utils = { path = "../pheidippides-utils" }
serde = "1.0.202"
serde_json = "1.0.117"
tokio = "1.37.0"
uuid = "1.8.0"
web-server = { path = "../web-server"}
