[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
pheidippides = { path = "../pheidippides-messenger" }
pheidippides-web = { path = "../pheidippides-web" }
web-server = { path = "../web-server" }
mock-db = { path = "../mock-db" }
tokio = "1.37.0"
tokio-test = "0.4.4"

[[test]]
name = "app"
path = "app.rs"

[[test]]
name = "http"
path = "http.rs"

[[test]]
name = "routing"
path = "routing.rs"
