[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
pheidippides-messenger = { path = "../lib/pheidippides-messenger" }
pheidippides-web = { path = "../lib/pheidippides-web" }
web-server = { path = "../lib/web-server" }
mock-db = { path = "../lib/mock-db" }
tokio = "1.37.0"
tokio-test = "0.4.4"

[[test]]
name = "app"
path = "app.rs"

[[test]]
name = "http"
path = "http.rs"

[[test]]
name = "routing"
path = "routing.rs"
