[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pheidippides-utils = {path="../pheidippides-utils"}
pheidippides = {path = "../pheidippides"}
tokio = { version = "1.37.0", features = ["io-util", "net"] }
tokio-util = "0.7.11"
anyhow = "1.0.83"
once_cell = "1.19.0"
askama = "0.12.1"
serde_json = "1.0.117"
serde = "1.0.202"
uuid = "1.8.0"
