[package]
name = "mock-db"
version = "0.1.0"
edition = "2021"

[dependencies]
pheidippides-messenger = { path= "../pheidippides-messenger" }

chrono = "0.4.38"
password-hash = "0.5.0"
uuid = "1.8.0"

[dev-dependencies]
#pheidippides-db-tests = { path = "../pheidippides-db-tests" }
#
#tokio = "1.37.0"
