[package]
name = "pheidippides-messenger"
version = "0.1.0"
edition = "2021"

[dependencies]
pheidippides-utils = {path= "../pheidippides-utils" }

anyhow = "1.0.83"
chrono = "0.4.38"
rand_core = { version = "0.6.4", features = ["getrandom"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["time"] }
uuid = { version = "1.8.0", features = ["v4"] }
